# Cofree-Traversable-Functors

./: Cofree-Traversable-Functors.cabal  LICENSE  README.md  stack.yaml
examples/: Cofree-Traversable-Functors-Examples.cabal  Day.hs  Optimized.hs  Walk.hs
src/Data/: Batch.hs  Fin.hs  Nat.hs  Vec.hs
src/Data/Traversable/: Cofree.hs
src/Data/Traversable/Cofree/: Bazaar.hs  Initial.hs  Optimized.hs
src/Data/Traversable/Cofree/Bazaar/: Internal.hs
src/Data/Traversable/Cofree/Optimized/: Internal.hs
