name:                Cofree-Traversable-Functors
version:             0.1.0.0
synopsis:            Cofree Traversable Functors
description:         Example implementation of cofree traversable functors
homepage:            https://github.com/KingoftheHomeless/Cofree-Traversable#readme
license:             BSD3
license-file:        LICENSE
author:              Love Waern
maintainer:          combiner8761@gmail.com
copyright:           2019 Love Waern
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Batch
    Data.Fin
    Data.Nat
    Data.Vec
    Data.Traversable.Cofree
    Data.Traversable.Cofree.Bazaar
    Data.Traversable.Cofree.Bazaar.Internal
    Data.Traversable.Cofree.Initial
    Data.Traversable.Cofree.Optimized
    Data.Traversable.Cofree.Optimized.Internal
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KingoftheHomeless/Cofree-Traversable
