name:                Cofree-Traversable-Functors-Examples
version:             0.1.0.0
synopsis:            Cofree Traversable Functors
description:         Example uses of Cofree Traversable Functors
homepage:            https://github.com/KingoftheHomeless/Cofree-Traversable-Functors/
license:             BSD3
license-file:        LICENSE
author:              Love Waern
maintainer:          combiner8761@gmail.com
copyright:           2019 Love Waern
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      .
  ghc-options:         -Wall
  exposed-modules:
    Walk
    Day
    Optimized
  build-depends:
    base >= 4.7 && < 5,
    transformers >= 0.5 && < 0.6,
    Cofree-Traversable-Functors
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KingoftheHomeless/Cofree-Traversable-Functors